算法和程序的一些基本概念，添加英文单词，下次丰富逻辑结构和存储结构

--- a/绪论.md
+++ b/绪论.md
@@ -1,23 +1,63 @@
 # 绪论
 
-**信息**是观察者自己的思想。
-**数据**是能让人产生信息的存在信息 。
-**结构**是信息之间的关系。或称为**逻辑结构**。
-  
-**数据元素**是信息集合中的元素。
-**数据项**数据元素的内容。
-**数据对象**是数据元素的集合。
-**数据结构**是数据对象的逻辑结构。
+**信息（information）**是观察者自己的思想。
+**数据（data）**是能让人产生信息的存在信息 。
+**结构（structure）**是信息之间的关系。或称为**逻辑结构（logical structure）**。
+  
+**数据元素（data element）**是信息集合中的元素。
+**数据项（data item）**数据元素的内容。
+**数据对象（data object）**是数据元素的集合。
+**数据结构（data structure）**是数据对象的逻辑结构。
 数据和信息存在映射关系。数据映射成信息，个人研究信息的结构，个人将有结构的信息映射成数据。
 
-**存储映像**是对逻辑结构的表示，又称物理映像、物理结构或存储结构。
-**虚拟存储结构**是可由其他存储映像表示的存储结构。
+**映像（map）**是对逻辑结构的表示，又称物理结构（physical structure）或存储结构（storage structure）。
+**虚拟存储结构（virtual storage structure）**是可由其他映像表示的存储结构。
 
-**数据类型**是对信息的表示方案和操作方案。
-**抽象数据类型**是可用其它数据类型表示的数据类型。
+**数据类型（data type）**是对信息的表示方案和操作表示方案。
+**抽象数据类型（ADT (Abstruct Date Type)）**是可用其它数据类型表示的数据类型。
 
-**原子类型**是无需再用其他数据类型表示的数据类型。
-**结构类型**是需要用其他数据类型表示的数据类型。
-**固定聚合类型**需要用确定数目的数据类型表示的数据类型。
-**可变聚合类型**需要用不确定数目的数据类型表示的数据类型。
-**多形数据类型**有多种表示的数据类型。
+**基本数据类型（primitive data type）**是不可再用其他数据类型表示的数据类型。
+**原子类型（atomic data type）**是无需再用其他数据类型表示的数据类型。
+**结构类型（structure data type）**是需要用其他数据类型表示的数据类型。
+**固定聚合类型（fixed-aggregate data type）**需要用确定数目的数据类型表示的数据类型。
+**可变聚合类型（variable-aggregate data type）**需要用不确定数目的数据类型表示的数据类型。
+**多形数据类型（polymorphic data type）**有多种表示的数据类型。
+
+**算法（alogrithm）**是将输入转换为输出的步骤。
+从这句话可以看出，算法要有输入，步骤需要足够精确没有歧义，步骤能够被做到，算法能执行完不能不结束，然后得到一个输出。
+也就是算法的五个特性
+
+- 输入（input）
+- 确定性（definiteness）
+- 可行性（feasibility）
+- 有穷性（finiteness）
+- 输出（output）
+
+算法的表示应该先考虑人的理解，其次考虑机器。
+算法产生的输出，对于算法本身来讲，总是正确的，但对于观察者来讲，不一定是正确的，这有时不是不可接受的。
+对于非法的输入，算法要应对。
+一个算法尽量只实现一个功能，而不是多个功能。
+运行算法时，应该能够有效地利用计算资源。
+对于使用者来讲，算法应该是易用的。
+也就是算法的六个基本的评价标准，
+
+- 可读性（readability）
+- 正确性（correctness）
+- 健壮性（robustness）
+- 简单性（simplicity）
+- 效率（effectiveness）
+- 可用性（usability）
+
+**语言（language）**是能代表信息的符号组合。人与人达成共同语言则能交流。我们可以用任何语言来表示算法。
+
+计算机只是在一系列物理信号的驱动下处理物理信号。
+**编程语言（programming language）**是用于表示驱动计算机运作的信号序列的语言。
+**机器语言（machine language）**是和驱动计算机运行的物理信号存在直接映射关系的语言。计算机信号作为数据，在人的思想中映射成了有结构的0和1的组合。人可以使用01组合来表示信息。人可以用这组01组合来描述算法。01组合映射成的信号可以驱动计算机运作。
+
+计算机可以将一组信号转换成另一组信号。人就可以将01信息转换成另一组01信息。**编译器（compiler）或解释器（interpreter）**就是用于转换信号的程序。
+人将文字编码为一组01信息，计算机在文字信息对应的信号驱动下在屏幕相应位置发相应颜色的光，有结构的光信号在人的思想中映射成了文字。
+反过来，人的文字信息在计算机中映射成文字信号。计算机只是在程序信号的驱动下，机械地将一组信号转换为另一组信号。可以经过不止一次转换，最终转换成机器语言对应的信号。
+
+**代码（code）**是用编程语言编写的符号序列。
+**程序（program）**是驱动计算机运作的信号序列。
+**进程（process）**是计算机在程序驱动下的执行过程。
