未完成的信息哲学思考

--- a/绪论.md
+++ b/绪论.md
@@ -1,31 +1,228 @@
+
 # 绪论
 
-**信息（information）**是观察者自己的思想。
-**数据（data）**是能让人产生信息的存在信息 。
-**结构（structure）**是信息之间的关系。或称为**逻辑结构（logical structure）**。
-  
-**数据元素（data element）**是信息集合中的元素。
+## 信息
+
+**信息（information）**是人的感受。
+一切感受皆是信息。
+每个信息都是对这个信息自己之外的存在的说明。
+意识对意识、物质、运动的感觉是基础信息。
+物质、意识、运动，这是原生感受，是第一条信息，是信息之边界，可以说明但不可定义。
+意识能把任意的信息组合在一起。
+人的创造能力就是自由组合信息的能力。
+
+意识用一个信息说明另一个信息。
+这个过程是可以无限循环的。
+从孤立的信息获得无限的没有意义的信息是没必要的，所以不能孤立地盯着有限的信息。
+
+**概念**是用于说明信息的信息。
+概念是知识单元。
+概念是同类现象具有的共同信息。
+概念的运动归根结底是意识的运动。
+
+**现象**是被说明的信息。
+最简单的说明是确认现象是什么。
+注意是意识和现象的结合。
+
+意识用信息来说明信息，也就是用概念来说明现象。
+意识运动产生现象。
+意识从现象中归纳出概念。
+把已有概念关联起来，也可得到新概念。
+把已有概念分解，也可得到新概念。
+概念本身是从现象中总结出来的认识，在思想外概念不可能存在，在思想内没有现象也不可能有现象的概念。
+
+被说明的现象应当准确地被蕴含于用于概念之中。
+但因为信息不足，或者信息错误，或者意识有问题，说明会不准确。
+意识很少把概念作为现象来观察并修正，一般人有很多错误的概念。
+用于说明现象的概念不能一会儿是这个概念，一会儿是那个概念，但人们经常自由组合信息，偷换概念，导致悖论出现。
+
+**项（item）**是作为一个整体的信息。或者叫做**对象（object）**。
+项是属性的集合。
+属性就是项的信息。
+属性是项的部分，属性也是项。
+项可以是物质、意识、运动、属性。
+有些属性不由意识决定，有些属性由意识决定，意识可发现无穷的项的属性，属性是无穷的。
+
+意识用信息来说明信息，也就是用项来说明项。
+意识不停地确认现象是什么，就是不停地对项做与或非运算。
+确认是什么，就是在确认不是什么，是和不是是不可分的且相对的概念。
+个体是什么，整体是什么，组成整体的个体是什么，个体组成的整体是什么。
+
+观察一个项的运动。把自己的感受当成视频，视频由无数画面组成，每一个画面都有一个项。
+项的运动使得当前的项和之前的项是不同的，是有先后的。
+现在和过去就是对不同画面的区分。
+现在和过去存在差异，则运动存在过。
+
+信息只能被替换，不能被改变，我们只能确定观察到从一个信息切换到另一个信息。
+可能会变的是信息说明的项。
+但我们不能确定已有信息之外，究竟是一个项在变换，还是多个项在替换。
+
+能自变的是意识，人把自己的意识当成一，惯性地把现象变换按照项的自变来理解。
+意识习惯注意确定数量的项，使得注意的现象被新现象顶替，不再注意过去的现象，所以不是同时注意新旧现象。
+意识习惯想象一个自变的项，从而间接讨论概念替换。
+
+人们对运动的说明常常不准确。
+数是信息，1就是1。
+人们说1能变成2，黑能变成白，这是错误的。
+常数和变数等不是数，而是一个非数的项，这个项运动让人感到数的替换。
+还有变量、变色、变种、变形、变性、变种等词语，都是如此。
+但是因为不论是自变还是替换，都能让人感到现象的替换，所以在指导行动时都能起到作用。
+
+人们习惯把变和换放在一起组成变换。
+**运动**即变换。
+**静止**就是没有运动。
+一个属性要么运动，要么静止，绝对是运动或静止。
+运动的属性一定存在，静止的属性也一定存在，无穷属性不能全部静止。
+即使过去是不变的，现在是静止的，但我们总是能观察到运动的东西，至少意识是运动的，过去一直在增加。
+项的某个属性运动了，项就是运动了。
+所以物质绝对运动。
+
+相对运动是相对存在的运动。
+最简单的相对运动是两个绝对运动的比较结果的运动。
+牛顿说的相对运动，研究的是质点，只含有一个时空属性，而这个时空属性也不再分为其他属性了，就这么一个属性，时空属性相对于另一质点的时空属性而存在，质点的位置是相对于其他质点的位置而确定的，时间也是相对某一质点运动而定的。
+
+**常项（constant）**是不会运动的项。
+**变项（variable）**是会运动的项。
+constant number是常数，variable number是变数。
+constant quantity是常量，variable quantity是变量。
+中文概念把constant翻译为常量，把variable翻译为变量，是在混淆概念。
+
+因为有意识会运动的概念，意识自由组合概念当然能得到变项的概念。
+信息就是常项。
+变项是对信息所说明的那个信息之外的项，也就是物质、意识、运动的解释和预测。
+变项运动，一方面是物质的主动运动，一方面是意识的主动运动。
+信号是变项，信号主动运动使得意识收到了信号。
+意识是变项，意识主动运动，得到了信息。
+
+意识可以把现象中若干同类项简化或合并成一个运动的项，从而把同类不同项的相同运算过程合并成一个项的运动，进而转化为一个变项的运动。
+
+## 语言
+
+**抽象（abstract）**就是用简单的信息代表复杂的信息。
+很少有人会归纳总结，可见抽象能力发挥很慢。
+说一个东西是抽象的，就是说通过观察这个东西的表象得到的信息少。
+只使用未抽象过的原生感觉思考，很费力。
+
+意识能自由说明信息。
+意识能自由组合原生感受，这种信息是一个符号，能通过人的行动而存在于信息之外。
+人能用符号来说明其他信息。
+人与人在符号含义上达成共识，通过传达外显的符号实现交流。
+**语言（language）**是一个系统，可以将符号信息和其他信息相互转换，实现互相说明。
+**名（name）**只是符号。
+**值（value）**是被符号说明的信息。
+语言就是存在于思想中的编码器和译码器，为了表达人的想法发明的信息转换的过程。使用语言时，名和值用一个说明另一个，所以不可分割地组成整体而存在于思想中。
+从编码功能上看，值是语言的输入，名是语言的输出。编码是一种抽象。
+从译码功能上看，名是语言的输入，值是语言的输出。译码是一种复原。
+
+名通常是为了指代值而存在，通常没必要创造出一个没有指代意义的符号，即使名不指代其他信息，但他的存在也是信息。
+名和值是语言概念里对立统一的概念。
+人不使用语言，只使用原生感觉, 就没有名的概念，也就不必把感觉称为值
+
+虽然语言是人发明的，即使不交流不学习，人也可以有自己的语言，但这很难。
+语言系统是建立在认知系统之上的系统，人能发明语言就要先拥有一套能用的认知系统。
+
+一个值可以有多个名。一个名可以有多个值。
+同义词，是同一个值在不同领域的不同名的词。可以用来限制讨论范围，丰富表达方式。而词语的意义经常是多样的。
+
+人与人对多义词的理解难免会有分歧。
+人习惯了使用语言，直接用名来交流和思考，把名和值的概念混淆，甚至等同，忽略原生思考能力，不去思考深层的真实含义。
+习惯虽然方便了大脑，但容易导致人的逻辑出问题，导致人在理解概念时遇到困难，特别是计算机的概念，比如进制。
+使用语言一定要逻辑严谨，学习者应准确地得到值，研究者应准确地传达名。本质上就是要准确地说明信息。
+不同人对同一事物的认知是否相同，是不为人所见的。能否完全相互理解是个问题。
+人和人的认知肯定会有不重合的部分，所以能否对一切信息达成共识是个问题。
+情绪感觉很难被精准表达，人各有各的快乐与难受，难以感同身受。
+总有未表达的思想，所以语言表达的信息永远不是全部信息。
+
+**数**是对“一”组成的存在的分类得到的概念。人们从现实中确定了某个作为“一”的存在，人们确认了“一”组成的“一”的存在，人们从存在概念中抽象出了数的概念。
+
+number的含义接近中文的“数字”，number可以指代以下的任何概念。
+
+- 数是表示量的基本数学概念，如：自然数、整数、有理数、实数等。
+- 数值就是指数字的值。
+- 数量是指事物的多少。由数词和量词共同组成，如：你有多少钱？100元。
+- 数目则是通过单位表现出来的事物的多少，如：你的钱数是多少？100。
+
+人们常说的number是numeral和value的结合。value和值同义。numeral和数符同义。因为现在通用的numeral是Hindu–Arabic numeral system，所以交流时没有明确指出numeral的概念，人们就忽略了numeral的概念。一般人把number和value等同起来。
+
+数字含义的多样性，导致numeral最好不用“数字”翻译。
+
+数符可以是无限的也是有限的。例：1/3（有限）=0.333……（无限）， 21/2 (有限） =1.41421356237……（无限）。
+所谓的有限无限数字，指的是数符的数量，而不是数值。
+
+无限大与无限小是不存在的，同时它也是存在的（超限数），是一种“不存在”的存在。
+
+## 程序
+
+信息归根结底是对存在的说明。
+人可以用各种存在来影射信息。
+
+计算机只是在信号的驱动下将输入信号换成输出信号。
+**程序（program）**是可以驱动计算机运作的信号序列。
+**进程（process）**是正在驱动机器的运作以完成一个任务的信号序列，或机器或信号序列完成一个任务的过程。
+
+显然人的语言信息能说明机器的运作过程信息。
+计算机的功能是有限的，我们必须迁就他的功能。就像初等运算是规定好的，我们必须按照规则运算。
+驱动计算机某个功能的信号，相当于谓语。被功能处理的信号相当于主语或宾语。
+计算机信号相当于功能的开关，在人的思想中映射成了有结构的0和1的组合。
+我们能把用自然语言描述的运算，映射到计算机上去。
+**机器语言（machine language）**是和驱动计算机运行的物理信号存在直接映射关系的语言。
+
+计算机具有自由规定信号转换逻辑的能力。也就是能用计算机做到任何描述。
+
+把所有的自然语言符号，全部用数符编码，就可以用数符来进行逻辑表达。
+可以使用01对所有的符号编码，用信号的转换模拟符号的转换。
+
+翻译是信息表现形式上的转换，而不改变含义。
+能用信号的转换模拟符号的转换，也就能做到不容易理解的01符号和更容易理解的自然符号之间的转换。
+
+人可以将文字编码为一组01信息，计算机在文字信息对应的信号驱动下在屏幕相应位置发相应颜色的光，有结构的光信号在人的思想中映射成了文字。
+反过来，人的文字信息在计算机中映射成文字信号。计算机只是在程序信号的驱动下，机械地将一组信号转换为另一组信号。可以经过不止一次转换，最终转换成机器语言对应的信号。
+人知道计算机的信号对应的功能，编程语言只提供映射到这些信号的语句，人使用有限制的语句描述计算机的执行步骤，每一条语句都映射到计算机的信号。
+
+**编程语言（programming language）**是用于表示驱动计算机运作的信号序列的语言。
+**编译器（compiler）或解释器（interpreter）**就是用于转换信号的程序。
+**汇编语言（assembly language）**是机器语言的抽象语言。
+机器语言和汇编语言是**低级语言（low-level language）**。
+**高级语言（high-level language）**是汇编语言的抽象语言。
+**代码（code）**是用编程语言编写的语句序列。
+
+信号系统被抽象成了编程语言。编程语言提供了基本的词语和语法规则。程序员需要知道编程语言的用法，想好要做什么，而不需要考虑信号的存在，只需要在计算机上用编程语言把要做的事描述清楚即可，相当于为计算机设置了开关，然后计算机就可以在程序的驱动下运作了。
+
+**数据（data）**是能被人用于产生信息的事物。
+**数据元素（data element）**是能当作运算对象的数据。
 **数据项（data item）**数据元素的内容。
-**数据对象（data object）**是数据元素的集合。
-**数据结构（data structure）**是数据对象的逻辑结构。
-数据和信息存在映射关系。数据映射成信息，个人研究信息的结构，个人将有结构的信息映射成数据。
+**数据对象（data object）**是同类数据元素的集合。
 
-**映像（map）**是对逻辑结构的表示，又称物理结构（physical structure）或存储结构（storage structure）。
-**虚拟存储结构（virtual storage structure）**是可由其他映像表示的存储结构。
+计算机概念和数学概念之间存在多层的一一映射。程序员经常混用不同级别不同系统的概念。
+存储区域【信号】《-》【数据】《-》【项】
+        物理存在《-》低级语言《-》高级语言
+因为使用语言，就不可避免地掺入了名和值的思想。
+我们使用名来描述某个级别的系统的值的转换。
 
-**数据类型（data type）**是对信息的表示方案和操作表示方案。
-**抽象数据类型（ADT (Abstruct Date Type)）**是可用其它数据类型表示的数据类型。
+在C和C++的概念中，**对象（object）**是用于存储数据的存储区域。
+个人感觉，对象应该指信号，能变的是信号，这样才能和项或数据元素的概念对应上。
+按照存储区域这样理解暂时也不会出逻辑上的问题。因为存储区域或信号能建立一对一的映射，他们都是存在的。但是毕竟是两个东西，而我们真正改变的是对象中的信号。
+每个存储单元有个地址，相当于对象的名字，或者信号的名字。地址对应变量名的概念。
+信号存储在对象中，从编程语言的角度，信号加载到寄存器，寄存器中的地址信号驱动控制器从某个对象中取出数据信号，指令信号驱动运算器对数据信号进行运算，驱动控制器将结果信号从寄存器存入内存。这是一个简单的过程。
 
+**类（class）**是对具有相同性质的对象的抽象描述。
+**类型（type）** 是对具有相同性质的数据的抽象描述。
+**数据类型（data type）**是对数据的表示方案和操作表示方案。
+它们都规定了项是什么样的，编译器将代码中的每一个变项转换成他们所规定的格式。
+
+**抽象数据类型（ADT (Abstruct Date Type)）**是可用其它数据类型具体表示的数据类型。
 **基本数据类型（primitive data type）**是不可再用其他数据类型表示的数据类型。
 **原子类型（atomic data type）**是无需再用其他数据类型表示的数据类型。
-**结构类型（structure data type）**是需要用其他数据类型表示的数据类型。
-**固定聚合类型（fixed-aggregate data type）**需要用确定数目的数据类型表示的数据类型。
-**可变聚合类型（variable-aggregate data type）**需要用不确定数目的数据类型表示的数据类型。
+**结构类型（structure data type）**是需要用一定数目的数据类型一起表示的数据类型。
+**固定聚合类型（fixed-aggregate data type）**需要用确定数目的数据类型一起表示的数据类型。
+**可变聚合类型（variable-aggregate data type）**需要用不确定数目的数据类型一起表示的数据类型。
 **多形数据类型（polymorphic data type）**有多种表示的数据类型。
 
-**算法（alogrithm）**是将输入转换为输出的步骤。
+## 算法和数据结构
+
+**算法（alogrithm）**是将输入转换为输出的步骤。算法是一种规则，是观念信息。代码、程序、进程都体现了算法这个规则。我们可以用任何语言来表示算法。
 从这句话可以看出，算法要有输入，步骤需要足够精确没有歧义，步骤能够被做到，算法能执行完不能不结束，然后得到一个输出。
-也就是算法的五个特性
+也就是算法的五个特性，
 
 - 输入（input）
 - 确定性（definiteness）
@@ -48,16 +245,9 @@
 - 效率（effectiveness）
 - 可用性（usability）
 
-**语言（language）**是能代表信息的符号组合。人与人达成共同语言则能交流。我们可以用任何语言来表示算法。
-
-计算机只是在一系列物理信号的驱动下处理物理信号。
-**编程语言（programming language）**是用于表示驱动计算机运作的信号序列的语言。
-**机器语言（machine language）**是和驱动计算机运行的物理信号存在直接映射关系的语言。计算机信号作为数据，在人的思想中映射成了有结构的0和1的组合。人可以使用01组合来表示信息。人可以用这组01组合来描述算法。01组合映射成的信号可以驱动计算机运作。
-
-计算机可以将一组信号转换成另一组信号。人就可以将01信息转换成另一组01信息。**编译器（compiler）或解释器（interpreter）**就是用于转换信号的程序。
-人将文字编码为一组01信息，计算机在文字信息对应的信号驱动下在屏幕相应位置发相应颜色的光，有结构的光信号在人的思想中映射成了文字。
-反过来，人的文字信息在计算机中映射成文字信号。计算机只是在程序信号的驱动下，机械地将一组信号转换为另一组信号。可以经过不止一次转换，最终转换成机器语言对应的信号。
-
-**代码（code）**是用编程语言编写的符号序列。
-**程序（program）**是驱动计算机运作的信号序列。
-**进程（process）**是计算机在程序驱动下的执行过程。
+**结构（structure）**是事物之间的关系。或称为**逻辑结构（logical structure）**。
+**数据结构（data structure）**是数据对象的逻辑结构。
+**映像（map）**是对逻辑结构的表示，又称物理结构（physical structure）或存储结构（storage struc ture）。
+所谓的表示逻辑结构，就是使用算法将逻辑结构映射成物理结构。
+**虚拟存储结构（virtual storage structure）**是可由其他映像表示的存储结构。
+数据结构的研究是算法的研究，算法的研究是数据结构的研究。
