Fix typo in consciousness explanation

--- a/绪论.md
+++ b/绪论.md
@@ -4,7 +4,7 @@
 ## 意识、运动、信息
 
 所谓的感受就是意识的暂时不变的运动状态。
-意识的各种运动，都是在主动改变自己暂时不变的运动状态。
+意识的各种主动运动，都是在主动改变自己暂时不变的运动状态。
 当运动结束，意识保持一个新的暂时不变的运动状态。
 意识的初始状态就是一个暂时不变的运动，意识已经有感受了，意识只能在这基础上继续主动运动或被动运动。
 
@@ -34,7 +34,7 @@
 最简单的说明是确认现象是什么。
 注意是意识和现象的结合。
 
-意识用信息来说明信息，也就是用概念来说明现象。
+意识用信息来说明信息，也就是意识用概念来说明现象。
 意识运动产生现象。
 意识从现象中归纳出概念。
 把已有概念关联起来，也可得到新概念。
