是否应该把运动当成一个东西？运动是否总会产生东西？

--- a/绪论.md
+++ b/绪论.md
@@ -1,11 +1,16 @@
-
 # 绪论
 
 ## 意识、运动、信息
 
-所谓的感受就是意识的暂时不变的运动状态。
+**信息（information）**是意识的感受。
+一切感受皆是信息。
+
+若是二元论，区分感受和意识，感受就是意识运动的结果。此时意识也是一种信息。
+
+若是一元论，不区分意识和感受，感受就是意识，意识就是感受。
+一个感受就是一个暂时不变的运动状态的意识。
 意识的各种主动运动，都是在主动改变自己暂时不变的运动状态。
-当运动结束，意识保持一个新的暂时不变的运动状态。
+当一个运动结束，意识保持一个新的暂时不变的运动状态。
 意识的初始状态就是一个暂时不变的运动，意识已经有感受了，意识只能在这基础上继续主动运动或被动运动。
 
 意识所谓的观察能力，就是某个东西的运动让意识拥有了某种感受，或者说是某个东西的运动让意识的运动状态运动。
@@ -13,8 +18,6 @@
 意识主动观察就是自己运动以改变自己的运动，而不是改变非自己的运动。
 也就是说，意识主动观察，只能观察自己的运动，也就是有对自己感受的感受。
 
-**信息（information）**是人的感受。
-一切感受皆是信息。
 每个信息都是对这个信息自己之外的存在的说明。
 意识对意识、物质、运动的感觉是基础信息。
 物质、意识、运动，这是原生感受，是第一条信息，是信息之边界，可以说明但不可定义。
